--- a/app.ipynb
+++ b/app.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,8 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer \n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import accuracy_score"
+    "from sklearn.metrics import accuracy_score\n",
+    "import joblib"
    ]
   },
   {
@@ -907,13 +908,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Save the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename= 'fake_news_predictor.joblib'\n",
+    "joblib.dump(model,filename)\n",
+    "\n",
+    "loadedModel=joblib.load(filename)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "0 => Real News\n",
     "1 => Fake News"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +954,7 @@
     "\n",
     "X_new = X_test[index]\n",
     "\n",
-    "prediction = model.predict(X_new)\n",
+    "prediction = loadedModel.predict(X_new)\n",
     "print(prediction)\n",
     "\n",
     "if (prediction[0]==0):\n",
